# MentalVerse

./: .gitignore  BACKEND_DEPLOYMENT_GUIDE.md  CHATBOT_SETUP.md  COMPREHENSIVE_CODE_REVIEW_REPORT.md  DEPLOYMENT_GUIDE.md  ONBOARDING_IMPLEMENTATION.md  PROGRESS.md  README.md  SMART_CONTRACT_DEPLOYMENT.md  TESTING_GUIDE.md  about.css  about.html  about.php  all.css  career.html  career.php  careerDetails.html  careerDetails.php  comingSoonBg.html  contactUs.html  debug-profile-creation.js  fix-lucide-imports.ps1  helpCenter.html  index.html  index.php  login.html  package-lock.json  package.json  pricing.html  register.html  script.js  services.html  services.php  servicesDetails.html  servicesDetails.php  setup-env.js  signup.html  style.css  tailwind.config.js
MentalVerse-main/: about.html  services.html
backend/: .env.example  .gitignore  README.md  package-lock.json  package.json  render.yaml  server.js  test-integration.js
css/: about.css  career.css  careerDetails.css  login.css  servicesDetails.css  style.css
docs/: README.md  docusaurus.config.js  package.json
frontend/: .env  .env.example  .gitignore  README.md  coderesolve.md  index.html  index.js  package-lock.json  package.json  rollup.config.js  tailwind.config.js  test-runner.js  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts  vite.waitlist.config.ts  waitlist.html
mentalverse/: .ic-assets.json5  Cargo.toml  README.md  canister_ids.json  dfx.json  mcp-config.json  (+2 more)
mentalverse/src/secure_messaging/: Cargo.toml  secure_messaging.did
mentalverse/src/secure_messaging/src/: lib.rs
(+306 files in other folders)
