[package]
name = "secure_messaging"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
time.workspace = true
hmac = "0.12"
hex = "0.4"

[dependencies.ic-stable-structures]
version = "0.6"